--- a/Reinforce/Reinforce_full.ipynb
+++ b/Reinforce/Reinforce_full.ipynb
@@ -305,7 +305,7 @@
     "\n",
     "### 5.1 Implementation\n",
     "\n",
-    "The reson why the ```backward()``` operation works on categorical distributions is explained here: https://pytorch.org/docs/stable/distributions.html\n",
+    "The reason why the ```backward()``` operation in ```PyTorch``` works on categorical distributions is explained here: https://pytorch.org/docs/stable/distributions.html\n",
     "\n",
     "### 5.2 Performance\n",
     "\n",
