--- a/Reinforce/Reinforce_full.ipynb
+++ b/Reinforce/Reinforce_full.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### 1.1 Overview\n",
     "\n",
-    "We use a neural network to apporixmate the optimal policy function (without keeping a table of value function estimates) and apply gradient ascent to find the optimal weights of the network i.e. the weights which maximize expected return. The neural network takes the current state as input and outputs a discrete probability distribution over the action set.\n",
+    "We use a neural network to apporixmate the optimal policy function (instead of keeping a table of value function estimates) and apply gradient ascent to find the optimal weights of the network i.e. the weights which maximize expected return. The neural network takes the current state as input and outputs a discrete probability distribution over the action set.\n",
     "\n",
     "If we let $\\theta$ denote the weights of the neural network and $U(\\theta)$ the expected future rewards.  We want to solve the problem \n",
     "\n",
