--- a/Reinforce/Reinforce_full.ipynb
+++ b/Reinforce/Reinforce_full.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "$$ \\triangledown{_\\theta} E_{\\pi_{\\theta}}[R(\\tau)] = \\frac{1}{m} \\sum_{i=1}^{m} \\triangledown{_\\theta} \\text{log}P(\\tau;\\theta^{(i)})  R(\\tau^{(i)})  \\tag{3} \\label{eq:approx}$$\n",
     "\n",
-    "Writing out the $\\triangledown{_\\theta} \\text{log}P(\\tau^{(i)};\\theta)$ term we get  \n",
+    "Expanding the $\\triangledown{_\\theta} \\text{log}P(\\tau^{(i)};\\theta)$ term we get  \n",
     "\n",
     "\\begin{align*}\n",
     "\\triangledown{_\\theta} \\text{log}P(\\tau;\\theta)\n",
