--- a/Reinforce/Reinforce_Colab.ipynb
+++ b/Reinforce/Reinforce_Colab.ipynb
@@ -190,7 +190,7 @@
         "# This DNN maps states to actions and as we train it by updating its weights and \n",
         "# intercept terms it learns to approximate the optimal policy \n",
         "# i.e. it learns to continuously move the cart left or right in order to balance \n",
-        "# the pole in an upright position without letting fall below a certain angle.\n",
+        "# the pole in an upright position without letting it fall below a certain angle.\n",
         "\n",
         "# Default network size: 4,16,2. \n",
         "\n",
