--- a/Reinforce/Reinforce_Colab.ipynb
+++ b/Reinforce/Reinforce_Colab.ipynb
@@ -341,7 +341,7 @@
       "source": [
         "## 4. Watch the trained agent perform the task\n",
         "\n",
-        "To display the how the trained agent performs the tast on `Google Colab` we have to record a video as done here: https://colab.research.google.com/drive/1flu31ulJlgiRL1dnN2ir8wGh9p7Zij2t#scrollTo=nQEtc28G4niA"
+        "To display how the trained agent performs the task on `Google Colab` we have to record a video as done here: https://colab.research.google.com/drive/1flu31ulJlgiRL1dnN2ir8wGh9p7Zij2t#scrollTo=nQEtc28G4niA"
       ]
     },
     {
