--- a/Reinforce/Reinforce.ipynb
+++ b/Reinforce/Reinforce.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### 1.1 Overview\n",
     "\n",
-    "We use a neural network to apporixmate the optimal policy function (instead of keeping a table of value function estimates) and apply gradient ascent to find the optimal weights of the network i.e. the weights which maximize expected future returns. The neural network takes the current state as input and outputs a discrete probability distribution over the action set.\n",
+    "e use a neural network to apporixmate the optimal policy function (instead of keeping a table of value function estimates as in [Q-learning](https://en.wikipedia.org/wiki/Q-learning)) and apply gradient ascent to find the optimal weights of the network i.e. the weights which maximize expected future returns. The neural network takes the current state as input and outputs a discrete probability distribution over the action set.\n",
     "\n",
     "If we let $\\theta$ denote the weights of the neural network and $U(\\theta)$ the expected future rewards.  We want to solve the problem \n",
     "\n",
@@ -29,10 +29,10 @@
     "$$ \\tau^{(i)} = (s_{0}^{(i)}, a_{0}^{(i)},...,s_{H}^{(i)}, a_{H}^{(i)},s_{H+1}^{(i)}) $$\n",
     "\n",
     "\n",
-    "2. Use the trajectories to estimate the gradient $\\triangledown{_\\theta} U(\\theta)$ \n",
+    "2. Use the trajectories to estimate the gradient $\hat{g} = \triangledown{_\theta} E_{\pi_{\theta}}[R(\tau)]\n",
     "\n",
     "\\begin{equation*}\n",
-    "max_\\theta E_{\\pi_{\\theta}}[R(\\tau)] \\approx \\hat{g} := \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{t=0}^{H} \\triangledown{_\\theta} \\text{log}_{\\pi_{\\theta}}(a_{t}^{(i)}|s_{t}^{(i)})R(\\tau^{(i)}) \n",
+    "\\hat{g} := \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{t=0}^{H} \\triangledown{_\\theta} \\text{log}_{\\pi_{\\theta}}(a_{t}^{(i)}|s_{t}^{(i)})R(\\tau^{(i)}) \n",
     "\\label{eq:grad_approx} \\tag{1}\n",
     "\\end{equation*}\n",
     "\n",
