--- a/Reinforce/Reinforce.ipynb
+++ b/Reinforce/Reinforce.ipynb
@@ -32,7 +32,7 @@
     "2. Use the trajectories to estimate the gradient $$\\hat{g} = \\triangledown{_\\theta} E_{\\pi_{\\theta}}[R(\\tau)]$$ \n",
     "\n",
     "\\begin{equation*}\n",
-    "\\hat{g} = \\triangledown{_\\theta} E_{\\pi_{\theta}}[R(\\tau)] := \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{t=0}^{H} \\triangledown{_\\theta} \\text{log}_{\\pi_{\\theta}}(a_{t}^{(i)}|s_{t}^{(i)})R(\\tau^{(i)}) \n",
+    "\\hat{g} = \\triangledown{_\\theta} E_{\\pi_{\\theta}}[R(\\tau)] := \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{t=0}^{H} \\triangledown{_\\theta} \\text{log}_{\\pi_{\\theta}}(a_{t}^{(i)}|s_{t}^{(i)})R(\\tau^{(i)}) \n",
     "\\label{eq:grad_approx} \\tag{1}\n",
     "\\end{equation*}\n",
     "\n",
