--- a/Reinforce/Reinforce_Colab.ipynb
+++ b/Reinforce/Reinforce_Colab.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "\n",
         "\\begin{equation}\n",
-        "\\hat{g} \\approx  \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{t=0}^{H} \\triangledown{_\\theta} \\text{log}_{\\pi_{\\theta}}(a_{t}^{(i)}|s_{t}^{(i)})R(\\tau^{(i)}) \\tag{1}\n",
+        "\\hat{g} =  \\triangledown_{\\theta} E_{\\pi_{\\theta}}[R(\\tau)] :=  \\frac{1}{m} \\sum_{i=1}^{m} \\sum_{t=0}^{H} \\triangledown{_\\theta} \\text{log}_{\\pi_{\\theta}}(a_{t}^{(i)}|s_{t}^{(i)})R(\\tau^{(i)}) \\tag{1}\n",
         "\\end{equation}\n",
         "\n",
         "3. Update the weights of the policy: \n",
