--- a/Reinforce/Reinforce_Colab.ipynb
+++ b/Reinforce/Reinforce_Colab.ipynb
@@ -21,7 +21,7 @@
         "\n",
         "### 1.1 Overview\n",
         "\n",
-        "We use a neural network to apporixmate the optimal policy function (instead of keeping a table of value function estimates as in [Q-learning](https://en.wikipedia.org/wiki/Q-learning)) and apply gradient ascent to find the optimal weights of the network i.e. the weights which maximize expected future returns. The neural network takes the current state as input and outputs a discrete probability distribution over the action set.\n",
+        "We use a neural network to apporixmate the optimal policy function (instead of keeping a table of value function estimates as in [Q-learning](https://en.wikipedia.org/wiki/Q-learning)) and apply gradient ascent to find the optimal weights of the network i.e. the weights which maximize expected future returns. The neural network takes the current state as input and outputs a discrete probability distribution over the action set. In the the context of the [CartPole-v0](https://github.com/openai/gym/wiki/CartPole-v0) control problem this means we input a 4d state vector of the cart position, cart velocity, pole angle and pole veloicty at the tip into the neural network which approximates the optimal policy function and the network outputs a discrete probablity distribution over the action space of pushing the cart left (denoted with 0) or right (denoted with 1). \n",
         "\n",
         "If we let $\\theta$ denote the weights of the neural network and $U(\\theta)$ the expected future rewards.  We want to solve the problem \n",
         "\n",
