--- a/Reinforce/Reinforce_Colab.ipynb
+++ b/Reinforce/Reinforce_Colab.ipynb
@@ -53,7 +53,7 @@
         "\n",
         "### 1.3 The REINFORCE gradient approximation\n",
         "\n",
-        "The crucial ingredient in the REINFORCE algorithm is the approximation formula in eq. (1). The derivation is shown below:\n",
+        "The gradient approximation in eq. (1) is a crucial piece of the REINFORCE algorithm. The full derivation is given below:\n",
         "\n",
         "\\begin{align*}\n",
         "\\triangledown{_\\theta} E_{\\pi_{\\theta}}[R(\\tau)] \n",
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "IUF3ASUqnAy3",
         "colab": {
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "FbMqHRHcnAy4",
         "outputId": "f745e9f8-e8bf-46d2-9114-c43c62143b68",
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Lh0ONybmnAy5"
       },
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "pO7Gd6fynAy5",
         "outputId": "d74f2625-99b4-4e77-dc37-a7ee33a06359",
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "X59utBJTnAy6",
         "outputId": "58b49eec-50c9-4e95-e57d-2fdbe79d94ab",
@@ -396,7 +396,7 @@
         "id": "nlFnr90G73zg",
         "outputId": "9c8546d7-204d-4f24-91d6-686b9c55096d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "ZSVjGU0BnAy7",
         "colab": {
@@ -498,7 +498,6 @@
     "colab": {
       "name": "Reinforce_Colab.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "accelerator": "GPU",
