--- a/Reinforce/Reinforce.ipynb
+++ b/Reinforce/Reinforce.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "### 1.3 The REINFORCE gradient approximation\n",
     "\n",
-    "The crucial ingredient in the REINFORCE algorithm is the approximation formula in $\\eqref{eq:grad_approx}$. The derivation is shown below:\n",
+    "The approximation formula in $\\eqref{eq:grad_approx}$ is a crucial piece of the REINFORCE algorithm. The full derivation is shown below:\n",
     "\n",
     "\\begin{align*}\n",
     "\\triangledown{_\\theta} E_{\\pi_{\\theta}}[R(\\tau)] \n",
